kind-multi-clusters/serviceClusterIp.yaml
apiVersion: v1
kind: Service
metadata:
  name: goserver-service
spec:
  selector: # resp. por filtra todos os Pods incorporados neste serviço
            # que vai dar match lá no deployment.yaml, em spec.selector.matchLabel
    app: goserver
  # abaixo setando o type de service, ao qual temos 4 tipos:
  # (1) ClusterIP, (2) NodePort, (3) Load Balancer e (4) ExternalName
  type: ClusterIP
  ports: # quais portas vamos acessar
  - name: goserver-service # nome é opcional no padrao <nome>-<nome>
    port: 80 # porta do Service
    targetPort: 8000 # porta que o service acessará a aplicacao
    protocol: TCP
